--- a/app/views/content/events_meetups.html.haml
+++ b/app/views/content/events_meetups.html.haml
@@ -15,6 +15,8 @@
   .span6
     %h4= "Upcoming Meetups"
     %ul.meetups
+      - if @meetups.second.empty?
+        %p= "No upcoming meetups planned."
       - @meetups.second.compact.each do |meetup|
         = render "shared/meetups/meetup", :meetup => meetup
     %h4= "Past Meetups"
