--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,23 +48,25 @@
     %p= "Latest news and happenings."
   .row-fluid.news
     .span4
+      %h4= "Luxembourg Startup Weekend"
+      %p.date= "21.11.2012"
+      .news_content
+        %p= "We were present on the first Startup Weekend held here in Luxembourg. Technoport at Esch-Belval was hosting an awesome and exciting event."
+        %p
+          :plain
+            We want to congratulate the entire Team around <strong><a href="http://twitter.com/tortorman" target="_blank">Diego De Biasio</a></strong> who organised this 54h event with over 70 participants.
+      %p= link_to "Luxembourg Startup Weekend", "http://luxembourg.startupweekend.org", :class => "btn btn-large btn-success btn-spanned"
+    .span4
+      %h4= "Student's Fair 2012"
+      %p.date= "21.11.2012"
+      .news_content
+        %p= "The Student's Fair 2012 was a huge success for us. Not only did we help the government to advertise ICT jobs, but we also found new community members."
+        %p
+          :plain
+            Special thanks to <strong><a href="http://twitter.com/weimerskirch" target="_blank">Michel Weimerskirch</a></strong> and <strong><a href="http://twitter.com/gillespoulles" target="_blank">Gilles Poulles</a></strong> for helping us at the Betacube booth.
+    .span4
       %h4= "New Website"
       %p.date= "13.11.2012"
       .news_content
         %p= "We finally got our new website ready. We still need to do some fine tuning here and there. But we are proud to have it online."
         %p= "This website is built to stay and will be updated regularly. There is also a roadmap coming soon to let you all know what features you can expect to come in the near future."
-    .span4
-      %h4= "Show & Tell Videos"
-      %p.date= "12.11.2012"
-      .news_content
-        %p= "We finally have some of our videos from the last Show & Tell event online."
-        %p= "You can check them out on our Youtube channel or on the Show & Tell page."
-      %p= link_to "Show & Tell 06.09.2012 @ The Hub", events_show_and_tell_past_20120906_path, :class => "btn btn-large btn-success btn-spanned"
-      %p= link_to "Betacube Youtube Channel", "http://www.youtube.com/user/betacubeeu", :class => "btn btn-large btn-success btn-spanned"
-    .span4
-      %h4= "Student's Fair 2012"
-      %p.date= "09.09.2012"
-      .news_content
-        %p= "Betacube will be present at this year's Student's Fair at the LuxExpo at Kirchberg."
-        %p= "We will support the Luxembourgish government on their booth to inform young students about web-related professions"
-      %p= link_to "Student's Fair 2012 @ The LuxExpo", events_students_fair_path, :class => "btn btn-large btn-success btn-spanned"
