Added Betacube Wordpress event in the news section

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,18 @@
     %p= "Latest news and happenings."
   .row-fluid.news
     .span4
+      %h4= "Betacube Loves Wordpress"
+      %p.date= "14.01.2013"
+      .news_content
+        %p= "Only a few days left until we are holding our first official workshop:"
+        %p
+          :plain
+            <strong>Betacube Loves Wordpress</strong>
+        %p
+          :plain
+            Join <strong><a href="http://twitter.com/ptahdunbar" target="_blank">Ptah Dunbar</a></strong> who will introduce you to the latest version of WordPress, demonstrate what it’s capable of, and how your business can take advantage of it right now.
+      %p= link_to "Betacube Loves Wordpress", "http://next.betacube.eu", :class => "btn btn-large btn-success btn-spanned"
+    .span4
       %h4= "Luxembourg Startup Weekend"
       %p.date= "21.11.2012"
       .news_content
@@ -64,9 +76,3 @@
         %p
           :plain
             Special thanks to <strong><a href="http://twitter.com/weimerskirch" target="_blank">Michel Weimerskirch</a></strong> and <strong><a href="http://twitter.com/gillespoulles" target="_blank">Gilles Poulles</a></strong> for helping us at the Betacube booth.
-    .span4
-      %h4= "New Website"
-      %p.date= "13.11.2012"
-      .news_content
-        %p= "We finally got our new website ready. We still need to do some fine tuning here and there. But we are proud to have it online."
-        %p= "This website is built to stay and will be updated regularly. There is also a roadmap coming soon to let you all know what features you can expect to come in the near future."
