Moved Isabelle to a supporting member

--- a/app/views/content/about.html.haml
+++ b/app/views/content/about.html.haml
@@ -121,17 +121,6 @@
               %li.twitter= link_to "@ptahdunbar", "http://twitter.com/ptahdunbar"
             %br.clear
 
-      %li.span2
-        .thumbnail
-          = image_tag "team/isabelle.jpg"
-          .caption
-            %h5= "Isabelle Naegelen"
-            %ul.roles
-              %li= "Supporting Member"
-            %ul.contact
-              %li.email= link_to "isabelle@betacube.eu", "mailto:isabelle@betacube.eu"
-              %li.facebook= link_to "https://www.facebook.com/isabelle.jn", "https://www.facebook.com/isabelle.jn"
-            %br.clear
 %br
 .row-fluid
   .span12
@@ -168,4 +157,14 @@
               %li= "Friend and Supporter"
             %ul.contact
               %li.twitter= link_to "@weitzh", "http://twitter.com/weitzh"
+            %br.clear
+      %li.span2
+        .thumbnail
+          = image_tag "team/isabelle.jpg"
+          .caption
+            %h5= "Isabelle Naegelen"
+            %ul.roles
+              %li= "Friend and supporter"
+            %ul.contact
+              %li.facebook= link_to "https://www.facebook.com/isabelle.jn", "https://www.facebook.com/isabelle.jn"
             %br.clear
