Added january meetup to the news

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,16 @@
     %p= "Latest news and happenings."
   .row-fluid.news
     .span4
+      %h4= "January Meetup @ THe Impactory"
+      %p.date= "17.01.2013"
+      .news_content
+        %p= "Save the date! Our january meetup is just around the corner."
+        %p
+          :plain
+            This time we will meet at <a href="http://www.theimpactory.com">The Impactory</a> at 8PM.
+            Be prepared for some casual networking and some fun.
+      %p= link_to "Sign up for the january meetup", "http://www.techup.lu/493", :class => "btn btn-large btn-success btn-spanned"
+    .span4
       %h4= "Betacube Loves Wordpress"
       %p.date= "14.01.2013"
       .news_content
@@ -68,11 +78,3 @@
           :plain
             We want to congratulate the entire Team around <strong><a href="http://twitter.com/tortorman" target="_blank">Diego De Biasio</a></strong> who organised this 54h event with over 70 participants.
       %p= link_to "Luxembourg Startup Weekend", "http://luxembourg.startupweekend.org", :class => "btn btn-large btn-success btn-spanned"
-    .span4
-      %h4= "Student's Fair 2012"
-      %p.date= "21.11.2012"
-      .news_content
-        %p= "The Student's Fair 2012 was a huge success for us. Not only did we help the government to advertise ICT jobs, but we also found new community members."
-        %p
-          :plain
-            Special thanks to <strong><a href="http://twitter.com/weimerskirch" target="_blank">Michel Weimerskirch</a></strong> and <strong><a href="http://twitter.com/gillespoulles" target="_blank">Gilles Poulles</a></strong> for helping us at the Betacube booth.
