Fixed some typo

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -56,6 +56,9 @@
           :plain
             This time we will meet at <a href="http://www.theimpactory.com">The Impactory</a> at 8PM.
             Be prepared for some casual networking and some fun.
+        %p
+          :plain
+            <strong>January 23rd @ 8PM</strong>
       %p= link_to "Sign up for the january meetup", "http://www.techup.lu/493", :class => "btn btn-large btn-success btn-spanned"
     .span4
       %h4= "Betacube Loves Wordpress"
