Fixed some typo

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,7 +48,7 @@
     %p= "Latest news and happenings."
   .row-fluid.news
     .span4
-      %h4= "January Meetup @ THe Impactory"
+      %h4= "January Meetup @ The Impactory"
       %p.date= "17.01.2013"
       .news_content
         %p= "Save the date! Our january meetup is just around the corner."
