Added new march meetup and updated gitignore file for C9.io

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,6 +48,19 @@
     %p= "Latest news and happenings."
   .row-fluid.news
     .span4
+      %h4= "March Meetup @ The Impactory"
+      %p.date= "20.03.2013"
+      .news_content
+        %p= "Save the date! Our march meetup is just around the corner."
+        %p
+          :plain
+            Our next meetup will take place at <a href="http://www.theimpactory.com">The Impactory</a> on the 20th of march at 7PM. We will serve small snacks and drinks.
+            Send an email to <a href="mailto:georges@betacube.eu">Georges</a> if you want to eat a pizza. 10€ per Pizza.
+        %p
+          :plain
+            <strong>March 20th @ 7PM</strong>
+      %p= link_to "Sign up for the january meetup", "http://www.techup.lu/564", :class => "btn btn-large btn-success btn-spanned"
+    .span4
       %h4= "January Meetup @ The Impactory"
       %p.date= "17.01.2013"
       .news_content
@@ -72,12 +85,3 @@
           :plain
             Join <strong><a href="http://twitter.com/ptahdunbar" target="_blank">Ptah Dunbar</a></strong> who will introduce you to the latest version of WordPress, demonstrate what it’s capable of, and how your business can take advantage of it right now.
       %p= link_to "Betacube Loves Wordpress", "http://next.betacube.eu", :class => "btn btn-large btn-success btn-spanned"
-    .span4
-      %h4= "Luxembourg Startup Weekend"
-      %p.date= "21.11.2012"
-      .news_content
-        %p= "We were present on the first Startup Weekend held here in Luxembourg. Technoport at Esch-Belval was hosting an awesome and exciting event."
-        %p
-          :plain
-            We want to congratulate the entire Team around <strong><a href="http://twitter.com/tortorman" target="_blank">Diego De Biasio</a></strong> who organised this 54h event with over 70 participants.
-      %p= link_to "Luxembourg Startup Weekend", "http://luxembourg.startupweekend.org", :class => "btn btn-large btn-success btn-spanned"
