Modified new events page

--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -7,8 +7,12 @@
     %p
       :plain
         Betacube is holding their 3rd <strong>Show & Tell</strong> event at the <strong>Technoport</strong> (Esch/Belval) at the <strong>18th of April 2013</strong>. It's the third edition of this community event giving the community a platform to present their self and connect with like minded web professionals from Luxembourg and the greater region.
+    %p
+      :plain
         The event will be packed by presentations held by community members and supporters. There will be plenty of <strong>food, drinks and time for networking</strong> during the event.
+
     %hr.soften.small
+
     .row-fluid
       .span8
         %h4= "Presentations"
@@ -31,7 +35,10 @@
           %dt= "Diego Debiasio"
           %dd= "Fab Lab Luxembourg"
 
-      .span3
+    %hr.soften.small
+
+    .row-fluid
+      .span12
         %h4= "Registration"
         %ul.location
           %li= "Technoport, Esch/Belval"
@@ -40,7 +47,10 @@
           %li
             = link_to "http://www.technoport.lu", "9 avenue des Hauts-Fourneaux"
 
-      .span3
+    %hr.soften.small
+
+    .row-fluid
+      .span12
         %h4= "Location"
         %ul.location
           %li= "Technoport, Esch/Belval"
@@ -49,7 +59,10 @@
           %li
             = link_to "http://www.technoport.lu", "9 avenue des Hauts-Fourneaux"
 
-      .span8
+    %hr.soften.small
+
+    .row-fluid
+      .span12
         %h4= "Schedule"
         %ul.schedule
           %li= "17:00 - Doors open"
@@ -60,14 +73,15 @@
           %li= "20:30 - 21:30 - Presentations"
           %li= "21:30 - Drinks & Networking"
 
-      .span8
+    %hr.soften.small
+
+    .row-fluid
+      .span12
         %h4= "Venue"
         %p
           :plain
-            <strong>TECHNOPORT<strong> is a technology-oriented business incubator that supports you in the <strong>validation</strong>, <strong>implementation</strong> and <strong>development</strong> of your business idea by allocating human and technical resources to help you achieve your goals.
+            <strong>TECHNOPORT</strong> is a technology-oriented business incubator that supports you in the <strong>validation</strong>, <strong>implementation</strong> and <strong>development</strong> of your business idea by allocating human and technical resources to help you achieve your goals.
             More on <a href="http://www.technoport.lu">www.technoport.lu</a>
-
-    %hr.soften.small
 
   .span3
     = render "shared/show_and_tell/menu", :show_home => true
