Added Eventbrite widget for next S&T event

--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -9,7 +9,7 @@
         Betacube is holding their 3rd <strong>Show & Tell</strong> event at the <strong>Technoport</strong> (Esch/Belval) at the <strong>18th of April 2013</strong>. It's the third edition of this community event giving the community a platform to present their self and connect with like minded web professionals from Luxembourg and the greater region.
     %p
       :plain
-        The event will be packed by presentations held by community members and supporters. There will be plenty of <strong>food, drinks and time for networking</strong> during the event.
+        The event will be packed with presentations held by community members and supporters. There will be plenty of <strong>food, drinks and time for networking</strong> during the event.
 
     %hr.soften.small
 
@@ -39,13 +39,24 @@
 
     .row-fluid
       .span12
+        %h4= "Schedule"
+        %ul.schedule
+          %li= "17:00 - Doors open"
+          %li= "17:30 - Drinks & Networking"
+          %li= "18:45 - Introduction"
+          %li= "19:00 - 20:00 - Presentations"
+          %li= "20:00 - 20:30 - Dinner"
+          %li= "20:30 - 21:30 - Presentations"
+          %li= "21:30 - Drinks & Networking"
+
+    %hr.soften.small
+
+    .row-fluid
+      .span12
         %h4= "Registration"
-        %ul.location
-          %li= "Technoport, Esch/Belval"
-          %li= "9 avenue des Hauts-Fourneaux"
-          %li= "L-4362 Esch-sur-Alzette"
-          %li
-            = link_to "http://www.technoport.lu", "9 avenue des Hauts-Fourneaux"
+        %p
+          :plain
+            <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=5886610009&ref=etckt&v=2" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Online Ticketing</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://betacubesnt3.eventbrite.com?ref=etckt">Betacube Show </a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 
     %hr.soften.small
 
@@ -58,20 +69,6 @@
           %li= "L-4362 Esch-sur-Alzette"
           %li
             = link_to "http://www.technoport.lu", "9 avenue des Hauts-Fourneaux"
-
-    %hr.soften.small
-
-    .row-fluid
-      .span12
-        %h4= "Schedule"
-        %ul.schedule
-          %li= "17:00 - Doors open"
-          %li= "17:30 - Drinks & Networking"
-          %li= "18:45 - Introduction"
-          %li= "19:00 - 20:00 - Presentations"
-          %li= "20:00 - 20:30 - Dinner"
-          %li= "20:30 - 21:30 - Presentations"
-          %li= "21:30 - Drinks & Networking"
 
     %hr.soften.small
 
