--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -14,26 +14,29 @@
     %hr.soften.small
 
     .row-fluid
-      .span8
+      .span12
         %h4= "Presentations"
         %dl.speakers
-          %dt= "Diego Debiasio"
-          %dd= "Introducing the Technoport"
+          %dt.name#diego= "Diego Debiasio"
+          %dd.talk#technoport= "Introducing the Technoport"
+          %dd.talk#fablab= "Fab Lab Luxembourg"
 
-          %dt= "Hervé Weitz"
-          %dd= "Sell Your Mess"
+          %dt.name#herve= "Hervé Weitz"
+          %dd.bio.herve
+            %p= "Hervé Weitz is currently employed at the Interdisciplinary Center for Security, Reliability and Trust (SnT) of the University of Luxembourg as project manager and he is responsible for technologies transfers and spin-off creation. Prior to working at SnT he launched a startup for the development of an intelligent social recommendation engine (thestorybaker.com) and was working as IT consultant for SOGETI. He is also the founder of SELL YOUR MESS an app for easy fast and beautiful selling, buying and renting items. He created the project in spring 2012 and plans to expand the platform to Europe in 2013."
+          %dd.talk#sell_your_mess= "Sell Your Mess"
+          %dd.abstract.sell_your_mess
+            %h4= "Abstract"
+            %p= "Luxembourg is not Silicon Valley and never will be, although Luxembourg is unique it has to develop its own formula and its first pioneer consumer technology company. My personal thought was, when it is hard to push a highly innovative and complex product in Luxembourg that should open new markets, why not try with a regarding simple product that disrupts markets. I came up with SELL YOUR MESS, that has even local traditional competitors and the ability to scale beyond the Luxembourgish borders. It is completely trimmed on mobile and social networks, and avoiding similarities to traditional classified ads. It is clearly inspired by Pinterest, Etsy & Instagram, to apply new hype and style to something that exists since the first days of humanity."
 
-          %dt= "tba"
-          %dd= "To be announced"
+          %dt.name= "tba"
+          %dd.talk= "To be announced"
 
-          %dt= "tba"
-          %dd= "To be announced"
+          %dt.name= "tba"
+          %dd.talk= "To be announced"
 
-          %dt= "tba"
-          %dd= "To be announced"
-
-          %dt= "Diego Debiasio"
-          %dd= "Fab Lab Luxembourg"
+          %dt.name= "tba"
+          %dd.talk= "To be announced"
 
     %hr.soften.small
 
