--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -80,7 +80,7 @@
         %h4= "Venue"
         %p
           :plain
-            <strong>TECHNOPORT</strong> is a technology-oriented business incubator that supports you in the <strong>validation</strong>, <strong>implementation</strong> and <strong>development</strong> of your business idea by allocating human and technical resources to help you achieve your goals.
+            <strong>Technoport</strong> is a technology-oriented business incubator that supports you in the <strong>validation</strong>, <strong>implementation</strong> and <strong>development</strong> of your business idea by allocating human and technical resources to help you achieve your goals.
             More on <a href="http://www.technoport.lu">www.technoport.lu</a>
 
   .span3
