--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -11,35 +11,15 @@
       :plain
         The event will be packed with presentations held by community members and supporters. There will be plenty of <strong>food, drinks and time for networking</strong> during the event.
 
+    %ul.jump
+      %li= link_to "Schedule", "#schedule", :class => "btn btn-small btn-primary"
+      %li= link_to "Speakers", "#speakers", :class => "btn btn-small btn-primary"
+      %li= link_to "Sponsors", "#sponsors", :class => "btn btn-small btn-primary"
+      %li= link_to "Registration", "#registration", :class => "btn btn-small btn-primary"
+      %li= link_to "Location", "#location", :class => "btn btn-small btn-primary"
+
+    %a{:name => "schedule"}
     %hr.soften.small
-
-    .row-fluid
-      .span12
-        %h4= "Presentations"
-        %dl.speakers
-          %dt.name#diego= "Diego Debiasio"
-          %dd.talk#technoport= "Introducing the Technoport"
-          %dd.talk#fablab= "Fab Lab Luxembourg"
-
-          %dt.name#herve= "Hervé Weitz"
-          %dd.bio.herve
-            %p= "Hervé Weitz is currently employed at the Interdisciplinary Center for Security, Reliability and Trust (SnT) of the University of Luxembourg as project manager and he is responsible for technologies transfers and spin-off creation. Prior to working at SnT he launched a startup for the development of an intelligent social recommendation engine (thestorybaker.com) and was working as IT consultant for SOGETI. He is also the founder of SELL YOUR MESS an app for easy fast and beautiful selling, buying and renting items. He created the project in spring 2012 and plans to expand the platform to Europe in 2013."
-          %dd.talk#sell_your_mess= "Sell Your Mess"
-          %dd.abstract.sell_your_mess
-            %h4= "Abstract"
-            %p= "Luxembourg is not Silicon Valley and never will be, although Luxembourg is unique it has to develop its own formula and its first pioneer consumer technology company. My personal thought was, when it is hard to push a highly innovative and complex product in Luxembourg that should open new markets, why not try with a regarding simple product that disrupts markets. I came up with SELL YOUR MESS, that has even local traditional competitors and the ability to scale beyond the Luxembourgish borders. It is completely trimmed on mobile and social networks, and avoiding similarities to traditional classified ads. It is clearly inspired by Pinterest, Etsy & Instagram, to apply new hype and style to something that exists since the first days of humanity."
-
-          %dt.name= "tba"
-          %dd.talk= "To be announced"
-
-          %dt.name= "tba"
-          %dd.talk= "To be announced"
-
-          %dt.name= "tba"
-          %dd.talk= "To be announced"
-
-    %hr.soften.small
-
     .row-fluid
       .span12
         %h4= "Schedule"
@@ -52,8 +32,99 @@
           %li= "20:30 - 21:30 - Presentations"
           %li= "21:30 - Drinks & Networking"
 
+    %a{:name => "speakers"}
     %hr.soften.small
+    .row-fluid.speakers
+      .span12
+        %h4= "Speakers"
+        .row-fluid.speaker
+          .span3
+            %h2.name= "Hervé Weitz"
+            %p.twitter
+              =link_to "@weitzh", "http://twitter.com/weitzh"
+          .span9.bio
+            %p= "Hervé is currently employed at the Interdisciplinary Center for Security, Reliability and Trust (SnT) of the University of Luxembourg as project manager and he is responsible for technologies transfers and spin-off creation."
+            %p= "Prior to working at SnT he launched a startup for the development of an intelligent social recommendation engine (thestorybaker.com) and was working as IT consultant for SOGETI."
+            %p= "He is also the founder of SELL YOUR MESS an app for easy fast and beautiful selling, buying and renting items. He created the project in spring 2012 and plans to expand the platform to Europe in 2013."
+        .row-fluid.abstract
+          .span3
+          .span9
+            %h3= "Sell Your Mess"
+            %p= "Luxembourg is not Silicon Valley and never will be, although Luxembourg is unique it has to develop its own formula and its first pioneer consumer technology company."
+            %p= "My personal thought was, when it is hard to push a highly innovative and complex product in Luxembourg that should open new markets, why not try with a regarding simple product that disrupts markets. I came up with SELL YOUR MESS, that has even local traditional competitors and the ability to scale beyond the Luxembourgish borders. It is completely trimmed on mobile and social networks, and avoiding similarities to traditional classified ads. It is clearly inspired by Pinterest, Etsy & Instagram, to apply new hype and style to something that exists since the first days of humanity."
 
+        .row-fluid.speaker
+          .span3
+            %h2.name= "Diego Debiasio"
+            %p.twitter
+              =link_to "@tortorman", "http://twitter.com/tortorman"
+          .span9.bio
+            %p= "CEO at Technoport SA"
+        .row-fluid.abstract
+          .span3
+          .span9
+            %h3= "Technoport"
+            %p= "Coming soon."
+        .row-fluid.abstract
+          .span3
+          .span9
+            %h3= "Fab Lab Luxembourg"
+            %p= "Coming soon."
+
+        .row-fluid.speaker
+          .span3
+            %h2.name= "Thibaut Britz"
+            %p.twitter
+              =link_to "@trendiction", "http://twitter.com/trendiction"
+          .span9.bio
+            %p= "CTO/Founder at Trendiction S.A."
+        .row-fluid.abstract
+          .span3
+          .span9
+            %h3= "TBA"
+            %p= "Coming soon."
+
+        .row-fluid.speaker
+          .span3
+            %h2.name= "Marc Marchal"
+            %p.twitter
+              =link_to "@marcmarchal", "http://twitter.com/marcmarchal"
+          .span9.bio
+            %p= "23 years old, amateur photographer, grafic and webdesign intern."
+        .row-fluid.abstract
+          .span3
+          .span9
+            %h3= "TBA"
+            %p= "Coming soon."
+
+        .row-fluid.speaker
+          .span3
+            %h2.name= "Vidar Andersen"
+            %p.twitter
+              =link_to "@blacktar", "http://twitter.com/blacktar"
+          .span9.bio
+            %p= "Coming soon."
+        .row-fluid.abstract
+          .span3
+          .span9
+            %h3= "TBA"
+            %p= "Coming soon."
+
+    %a{:name => "sponsors"}
+    %hr.soften.small
+    .row-fluid
+      .span12
+        %h4= "Sponsors"
+        .row-fluid.sponsor
+          .span3
+            %h2.name
+              =link_to "Paymill GmbH", "http://www.paymill.com"
+          .span9
+            %p= "Paymill – this is today’s online credit card payment: secure, uncomplicated, and easily integrated."
+
+
+    %a{:name => "registration"}
+    %hr.soften.small
     .row-fluid
       .span12
         %h4= "Registration"
@@ -61,8 +132,18 @@
           :plain
             <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=5886610009&ref=etckt&v=2" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Online Ticketing</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://betacubesnt3.eventbrite.com?ref=etckt">Betacube Show </a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 
+    %a{:name => "venue"}
     %hr.soften.small
+    .row-fluid
+      .span12
+        %h4= "Venue"
+        %p
+          :plain
+            <strong>Technoport</strong> is a technology-oriented business incubator that supports you in the <strong>validation</strong>, <strong>implementation</strong> and <strong>development</strong> of your business idea by allocating human and technical resources to help you achieve your goals.
+            More on <a href="http://www.technoport.lu">www.technoport.lu</a>
 
+    %a{:name => "location"}
+    %hr.soften.small
     .row-fluid
       .span12
         %h4= "Location"
@@ -72,16 +153,6 @@
           %li= "L-4362 Esch-sur-Alzette"
           %li
             = link_to "http://www.technoport.lu", "9 avenue des Hauts-Fourneaux"
-
-    %hr.soften.small
-
-    .row-fluid
-      .span12
-        %h4= "Venue"
-        %p
-          :plain
-            <strong>Technoport</strong> is a technology-oriented business incubator that supports you in the <strong>validation</strong>, <strong>implementation</strong> and <strong>development</strong> of your business idea by allocating human and technical resources to help you achieve your goals.
-            More on <a href="http://www.technoport.lu">www.technoport.lu</a>
 
   .span3
     = render "shared/show_and_tell/menu", :show_home => true
