Changed anchor on event page

--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -16,7 +16,7 @@
       %li= link_to "Speakers", "#speakers", :class => "btn btn-small btn-primary"
       %li= link_to "Sponsors", "#sponsors", :class => "btn btn-small btn-primary"
       %li= link_to "Registration", "#registration", :class => "btn btn-small btn-primary"
-      %li= link_to "Location", "#location", :class => "btn btn-small btn-primary"
+      %li= link_to "Venue", "#venue", :class => "btn btn-small btn-primary"
 
     %a{:name => "schedule"}
     %hr.soften.small
@@ -142,7 +142,6 @@
             <strong>Technoport</strong> is a technology-oriented business incubator that supports you in the <strong>validation</strong>, <strong>implementation</strong> and <strong>development</strong> of your business idea by allocating human and technical resources to help you achieve your goals.
             More on <a href="http://www.technoport.lu">www.technoport.lu</a>
 
-    %a{:name => "location"}
     %hr.soften.small
     .row-fluid
       .span12
