Enabled next S&T event

--- a/app/views/shared/show_and_tell/_menu.html.haml
+++ b/app/views/shared/show_and_tell/_menu.html.haml
@@ -1,5 +1,6 @@
 %h4= "Next Show & Tell"
-%p= "coming soon..."
+%ul.show_and_tell
+  %li= link_to "18.04.2013 @ Technoport", events_show_and_tell_next_path, :class => "btn btn-success"
 %h4= "Previous Show & Tell events"
 %ul.show_and_tell
   %li= link_to "19.04.2012 @ Abbaye Neumünster", events_show_and_tell_past_20120419_path, :class => "btn btn-inverse"
