Updated S&T #3 Speaker List

--- a/app/assets/stylesheets/layout.css.less
+++ b/app/assets/stylesheets/layout.css.less
@@ -231,6 +231,10 @@ ul.location {
   margin-top: 0px;
 }
 
+.speaker p.work_title {
+  font-weight: bold;
+}
+
 .speakers h3 {
   font-size: 22px;
   font-weight: bold;
