--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -55,6 +55,17 @@
 
         .row-fluid.speaker
           .span3
+            %h2.name= "Michael Rupp"
+            %p.twitter
+          .span9.bio
+            %p= "TBA"
+        .row-fluid.abstract
+          .span3
+          .span9
+            %h3= "TBA"
+
+        .row-fluid.speaker
+          .span3
             %h2.name= "Diego Debiasio"
             %p.twitter
               =link_to "@tortorman", "http://twitter.com/tortorman"
@@ -90,7 +101,9 @@
             %p.twitter
               =link_to "@marcmarchal", "http://twitter.com/marcmarchal"
           .span9.bio
-            %p= "23 years old, amateur photographer, grafic and webdesign intern."
+            %p.work_title= "Webdesigner"
+            %p= "Marc has studied graphic and web design at the CAD in brussels. His interest in the new media and some HTML/CSS crash courses by a good friend guided him to web and application design. "
+            %p= "He made several internships in web agencies and was hired by Moskito during his last internship in 2012. At Mosktio, in direct contact with clients and working on projects of different sizes, he was introduced to the working environment and got the possibilities to develop his design and html skills. One year after he started his job at moskito, he got the possibility to work on the new Utopolis website his largest project, yet."
         .row-fluid.abstract
           .span3
           .span9
