Added additional speaker to the S&T #3 event page

--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -66,6 +66,19 @@
 
         .row-fluid.speaker
           .span3
+            %h2.name= "Alex Sinner"
+            %p.twitter
+              =link_to "@weitzh", "http://twitter.com/alexsinner"
+          .span9.bio
+            %p.work_title= "Solutions Architect at Amazon Web Services"
+            %p= "TBA"
+        .row-fluid.abstract
+          .span3
+          .span9
+            %h3= "TBA"
+
+        .row-fluid.speaker
+          .span3
             %h2.name= "Diego Debiasio"
             %p.twitter
               =link_to "@tortorman", "http://twitter.com/tortorman"
