Updated S&T #3 Speaker information

--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -71,11 +71,12 @@
               =link_to "@weitzh", "http://twitter.com/alexsinner"
           .span9.bio
             %p.work_title= "Solutions Architect at Amazon Web Services"
-            %p= "TBA"
+            %p= "Alex is a Solutions Architect at Amazon Web Services and works with businesses of all sizes to help them deliver their IT projects in the cloud. During his career Alex has worked as a researcher in Artificial Intelligence, entrepreneur, and in various roles within Amazon.com."
+            %p= "Before joining Amazon Web Services, Alex was responsible for the launch of the Amazon marketplace business in Italy and Spain. He uses his experience to help customers bring their ideas to life using Amazon Web Services’ IT infrastructure platform."
         .row-fluid.abstract
           .span3
           .span9
-            %h3= "TBA"
+            %h3= "A taste of AWS"
 
         .row-fluid.speaker
           .span3
@@ -120,7 +121,7 @@
         .row-fluid.abstract
           .span3
           .span9
-            %h3= "TBA"
+            %h3= "How to please everybody"
             %p= "Coming soon."
 
     %a{:name => "sponsors"}
