Added additional speaker info

--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -58,11 +58,15 @@
             %h2.name= "Michael Rupp"
             %p.twitter
           .span9.bio
-            %p= "TBA"
+            %p= "Michael is part of the development team of our sponsor paymill from munich. He is mainly responsible for their API and everything else that does not need a frontend."
+            %p= "Before that he worked on a web based print publishing plattform, got some experience as a freelancer and studied information technologies and mathematics."
+            %p= "He loves movies and good food (too much)."
         .row-fluid.abstract
           .span3
           .span9
-            %h3= "TBA"
+            %h3= "API - what is that?"
+            %p= "Everywhere you hear about cool new APIs you should use nowadays. But what is it? How do i use it? And what do i have to consider if i want to develop one myself?"
+            %p= "I will use paymill as an example for an API and discuss the biggest issues when you try to use or to develop something like that."
 
         .row-fluid.speaker
           .span3
