Updated speaker list for S&T #3

--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -37,6 +37,21 @@
     .row-fluid.speakers
       .span12
         %h4= "Speakers"
+
+        .row-fluid.speaker
+          .span3
+            %h2.name= "Diego De Biasio"
+            %p.twitter
+              =link_to "@tortorman", "http://twitter.com/tortorman"
+          .span9.bio
+            %p= "CEO Technoport"
+            %p
+              =link_to "Diego De Biasio on LinkedIn", "http://www.linkedin.com/in/diegodebiasio"
+        .row-fluid.abstract
+          .span3
+          .span9
+            %h3= "Short presentation of Technoport"
+
         .row-fluid.speaker
           .span3
             %h2.name= "Hervé Weitz"
@@ -84,21 +99,17 @@
 
         .row-fluid.speaker
           .span3
-            %h2.name= "Diego Debiasio"
+            %h2.name= "Rodolfo Baïz"
             %p.twitter
-              =link_to "@tortorman", "http://twitter.com/tortorman"
+              =link_to "@rod3412", "http://twitter.com/rod3412"
           .span9.bio
-            %p= "CEO at Technoport SA"
+            %p= "Fab Lab Manager"
+            %p
+              =link_to "Rodolfo Baïz on LinkedIn", "http://www.linkedin.com/in/rodolfobaiz"
         .row-fluid.abstract
           .span3
           .span9
-            %h3= "Technoport"
-            %p= "Coming soon."
-        .row-fluid.abstract
-          .span3
-          .span9
-            %h3= "Fab Lab Luxembourg"
-            %p= "Coming soon."
+            %h3= "What opportunities for digital fabrication - why a Fab Lab in Luxembourg?"
 
         .row-fluid.speaker
           .span3
