Added S&T on home page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -54,6 +54,16 @@
         %p= "Save the date! Our march meetup is just around the corner."
         %p
           :plain
+            Betacube is holding their 3rd Show & Tell event at the Technoport (Esch/Belval) at the 18th of April 2013. It's the third edition of this community event giving the community a platform to present their self and connect with like minded web professionals from Luxembourg and the greater region.
+            The event will be packed with presentations held by community members and supporters. There will be plenty of food, drinks and time for networking during the event.
+      %p= link_to "Show & Tell #3", "http://www.betacube.eu/events/show_and_tell/next", :class => "btn btn-large btn-success btn-spanned"
+    .span4
+      %h4= "March Meetup @ The Impactory"
+      %p.date= "20.03.2013"
+      .news_content
+        %p= "Save the date! Our march meetup is just around the corner."
+        %p
+          :plain
             Our next meetup will take place at <a href="http://www.theimpactory.com">The Impactory</a> on the 20th of march at 7PM. We will serve small snacks and drinks.
             Send an email to <a href="mailto:georges@betacube.eu">Georges</a> if you want to eat a pizza. 10€ per Pizza.
         %p
@@ -73,15 +83,3 @@
           :plain
             <strong>January 23rd @ 8PM</strong>
       %p= link_to "Sign up for the january meetup", "http://www.techup.lu/493", :class => "btn btn-large btn-success btn-spanned"
-    .span4
-      %h4= "Betacube Loves Wordpress"
-      %p.date= "14.01.2013"
-      .news_content
-        %p= "Only a few days left until we are holding our first official workshop:"
-        %p
-          :plain
-            <strong>Betacube Loves Wordpress</strong>
-        %p
-          :plain
-            Join <strong><a href="http://twitter.com/ptahdunbar" target="_blank">Ptah Dunbar</a></strong> who will introduce you to the latest version of WordPress, demonstrate what it’s capable of, and how your business can take advantage of it right now.
-      %p= link_to "Betacube Loves Wordpress", "http://next.betacube.eu", :class => "btn btn-large btn-success btn-spanned"
