Updated news on homepage for S&T

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -51,11 +51,8 @@
       %h4= "March Meetup @ The Impactory"
       %p.date= "20.03.2013"
       .news_content
-        %p= "Save the date! Our march meetup is just around the corner."
-        %p
-          :plain
-            Betacube is holding their 3rd Show & Tell event at the Technoport (Esch/Belval) at the 18th of April 2013. It's the third edition of this community event giving the community a platform to present their self and connect with like minded web professionals from Luxembourg and the greater region.
-            The event will be packed with presentations held by community members and supporters. There will be plenty of food, drinks and time for networking during the event.
+        %p= "Betacube is holding their 3rd Show & Tell event at the Technoport (Esch/Belval) at the 18th of April 2013. It's the third edition of this community event giving the community a platform to present their self and connect with like minded web professionals from Luxembourg and the greater region."
+        %p= "The event will be packed with presentations held by community members and supporters."
       %p= link_to "Show & Tell #3", "http://www.betacube.eu/events/show_and_tell/next", :class => "btn btn-large btn-success btn-spanned"
     .span4
       %h4= "March Meetup @ The Impactory"
