Fixed typo on home page news

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -48,7 +48,7 @@
     %p= "Latest news and happenings."
   .row-fluid.news
     .span4
-      %h4= "March Meetup @ The Impactory"
+      %h4= "Show & Tell #3 at the Technoport"
       %p.date= "20.03.2013"
       .news_content
         %p= "Betacube is holding their 3rd Show & Tell event at the Technoport (Esch/Belval) at the 18th of April 2013. It's the third edition of this community event giving the community a platform to present their self and connect with like minded web professionals from Luxembourg and the greater region."
