Added Patrick Welfringer as a speaker to the upcoming S&T

--- a/app/views/content/events_show_and_tell_next.html.haml
+++ b/app/views/content/events_show_and_tell_next.html.haml
@@ -124,7 +124,29 @@
           .span3
           .span9
             %h3= "How to please everybody"
-            %p= "Coming soon."
+
+        .row-fluid.speaker
+          .span3
+            %h2.name= "Patrick Welfringer"
+            %p.twitter
+              =link_to "@welfringer", "http://twitter.com/welfringer"
+          .span9.bio
+            %p.work_title= "Programmer"
+            %p= "Before moving back to Luxembourg, he worked for startups, web agencies and IT consulting firms in Paris. He coded ecommerce sites and internet applications using Flash, Flex and Java. These days, he develops internet portals for insurances."
+            %p= "He enjoys programming while listening to jazz or electronica and has a healthy obsession with chocolate. His score of 46.49446% in the geek test qualifies him as a Super Geek."
+            %p= "Patrick has 3 kids that spend a lot of time consuming smartphone apps and games, when they could have just as much fun creating them."
+
+        .row-fluid.abstract
+          .span3
+          .span9
+            %h3= "A call to arms for code literacy"
+            %p= "There is a worldwide movement in favour of code literacy - the ability to program - but Luxembourg is slow to catch on. Find out what you can do about it!"
+            %p= "Computers and digital devices are everywhere. They run our phones, our cars, our banks. They play an increasingly important role in our work and our everyday lives."
+            %p= "But our children, the \"digital natives\" are only learning how to use them passively."
+            %p= "We need to show our kids how their digital world actually works. That they can make computers do what they want - instead of the other way around."
+            %p= "We should teach the next generation programming, along with problem solving and logical thinking. This new literacy is essential for all fields of science and technology, no matter what career they pursue."
+            %p= "Code Club does precisely that in the UK. It's an ASBL that runs after-school coding clubs for kids. Volunteers help the children have fun coding games, animations and websites."
+            %p= "Code Club's aim is to give every child the chance to learn to code. And that is also your mission, should you choose to accept it."
 
     %a{:name => "sponsors"}
     %hr.soften.small
